DEV-2639 Upgrade health checker and add tumor/germline only support